<resources>
    <string name="app_name">CAV</string>
    <string name="text_failure">FALHA INESPERADA NO APLICATIVO! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_initial_menu">MENU INICIAL - V %1$s</string>
    <string name="text_item_note">APONTAMENTO</string>
    <string name="text_item_config">CONFIGURAÇÃO</string>
    <string name="text_item_out">SAIR</string>
    <string name="text_status_started">Aparelho sem número</string>
    <string name="text_status_send">Existe dados para serem enviado</string>
    <string name="text_status_sending">Dados estão sendo enviados</string>
    <string name="text_status_sent">Não existe dados para serens enviados</string>
    <string name="text_blocked_access_app">ACESSO NEGADO! POR FAVOR, CONFIGURE O APLICATIVO ANTES DO USO DO MESMO!</string>
    <string name="text_password">SENHA</string>
    <string name="text_pattern_ok">OK</string>
    <string name="text_pattern_cancel">CANCELAR</string>
    <string name="text_pattern_return">RETORNAR</string>
    <string name="text_pattern_next">AVANÇAR</string>
    <string name="text_password_invalid">SENHA INVÁLIDA!</string>
    <string name="text_title_number">NRO APARELHO</string>
    <string name="text_pattern_save">SALVAR</string>
    <string name="text_pattern_edit">EDITAR</string>
    <string name="text_pattern_insert">INSERIR</string>
    <string name="text_pattern_delete">EXCLUIR</string>
    <string name="text_msg_recovery">RECUPERANDO DADOS DA TABELA \"%1$s\" DO WEB SERVICE.</string>
    <string name="text_msg_clean">LIMPANDO A TABELA \"%1$s\".</string>
    <string name="text_msg_save">SALVANDO DADOS NA TABELA \"%1$s\".</string>
    <string name="text_msg_get_token">ENVIANDO DADOS DE TOKEN</string>
    <string name="text_msg_save_token">SALVANDO DADOS DE TOKEN</string>
    <string name="text_msg_finish_update_initial">AJUSTE INICIAIS FINALIZADO COM SUCESSO!</string>
    <string name="text_msg_finish_update_completed">ATUALIZAÇÃO DE DADOS REALIZADO COM SUCESSO!</string>
    <string name="text_field_empty">CAMPO VAZIO! POR FAVOR, PREENCHA O CAMPO \"%1$s\" PARA DAR CONTINUIDADE AO APONTAMENTO.</string>
    <string name="text_input_data_invalid">DADO INVÁLIDO! POR FAVOR, VERIFIQUE SE O CAMPO \"%1$s\" FOI DIGITADO CORRETAMENTE OU ATUALIZE OS DADOS PARA VERIFICAR SE OS MESMOS NÃO ESTÃO DESATUALIZADOS.</string>
    <string name="text_field_empty_config">CAMPO VAZIO! POR FAVOR, PREENCHA TODOS OS CAMPOS PARA SALVAR AS CONFIGURAÇÕES E ATUALIZAR TODAS AS BASES DE DADOS.</string>
    <string name="text_msg_realized_breathalyzer_invalid">CAMPO NÃO PREENCHIDO! POR FAVOR, PREENCHA SE O TESTE DE BAFÔMETRO FOI REALIZADO OU NÃO PARA QUE POSSA DAR ANDAMENTO AO APONTAMENTO.</string>
    <string name="text_msg_result_breathalyzer_invalid">CAMPO NÃO PREENCHIDO! POR FAVOR, PREENCHA SE O TESTE DE BAFÔMETRO FOI POSITIVO OU NEGATIVO PARA QUE POSSA DAR ANDAMENTO AO APONTAMENTO.</string>
    <string name="text_update_failure">FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR, ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_title_attendant">MATRICULA ATENDENTE</string>
    <string name="text_number_1">1</string>
    <string name="text_number_2">2</string>
    <string name="text_number_3">3</string>
    <string name="text_number_4">4</string>
    <string name="text_number_5">5</string>
    <string name="text_number_6">6</string>
    <string name="text_number_7">7</string>
    <string name="text_number_8">8</string>
    <string name="text_number_9">9</string>
    <string name="text_number_0">0</string>
    <string name="text_number_00">00</string>
    <string name="text_comma">,</string>
    <string name="text_pattern_clean">APAGAR</string>
    <string name="text_pattern_update">ATUALIZAR DADOS</string>
    <string name="text_edit_car">NRO VIATURA</string>
    <string name="text_item_car">VIATURA</string>
    <string name="text_card">FICHA</string>
    <string name="text_desc_local">O LOCAL DO ACIDENTE SERIA ESSE ABAIXO?\n\n ENDEREÇO: %1$s\n\nLATITUDE: %2$s\nLONGITUDE: %3$s</string>
    <string name="text_local_selection">Localização Selecionada</string>
    <string name="text_input_address">Digite o endereço</string>
    <string name="text_field">Pesquisar</string>
    <string name="text_capture_local">CAPTURAR LOCALIZAÇÃO</string>
    <string name="text_local_now">LOCALIZAÇÃO ATUAL</string>
    <string name="text_type_local">DIGITAR LOCAL</string>
    <string name="text_nature">NATUREZA DE ATENDIMENTO</string>
    <string name="text_attendant">ATENDENTE</string>
    <string name="text_local">LOCAL</string>
    <string name="text_type_accident">TIPO DE ACIDENTE</string>
    <string name="text_data_local">DADOS DO LOCAL</string>
    <string name="text_support_teams">EQUIPES DE APOIO</string>
    <string name="text_equip_own">EQUIPAMENTO PRÓPRIO</string>
    <string name="text_equip">EQUIPAMENTO</string>
    <string name="text_driver">MOTORISTA</string>
    <string name="text_vehicle_third">VEÍCULO DE TERCEIROS</string>
    <string name="text_vehicle">VEÍCULO</string>
    <string name="text_title_involved_external">ENVOLVIDO(S) - EXTERNO</string>
    <string name="text_title_involved_colab">ENVOLVIDO(S) - COLABORADOR</string>
    <string name="text_involved">ENVOLVIDO</string>
    <string name="text_treatment">TRATAMENTO</string>
    <string name="text_title_witness_external">TESTEMUNHA(S) - EXTERNO</string>
    <string name="text_title_witness_colab">TESTEMUNHA(S) - COLABORADOR</string>
    <string name="text_witness">TESTEMUNHA</string>
    <string name="text_close_card">DESEJA REALMENTE CANCELAR A FICHA? ISSO APAGARÁ DOS DADOS JÁ INSERIDO NA FICHA.</string>
    <string name="text_list_empty">POR FAVOR, SELECIONE PELO MENOS UMA OPÇÃO PARA QUE POSSA SER SALVO .</string>
    <string name="text_address">ENDEREÇO:</string>
    <string name="text_latitude">LATITUDE:</string>
    <string name="text_longitude">LATITUDE:</string>
    <string name="text_option_data_local">OPÇÃO</string>
    <string name="text_item_data_local">ITEM</string>
    <string name="text_edit_driver">MATRICULA MOTORISTA</string>
    <string name="text_edit_passenger">MATRICULA PASSAGEIRO</string>
    <string name="text_edit_involved">MATRICULA ENVOLVIDO</string>
    <string name="text_edit_witness">MATRICULA TESTEMUNHA</string>
    <string name="text_edit_equip">NRO EQUIPAMENTO</string>
    <string name="text_detail">DETALHE</string>
    <string name="text_equip_sec">EQUIP. SECUNDÁRIO(S)</string>
    <string name="text_check_delete_equip_sec">DESEJA REALMENTE EXCLUIR O EQUIPAMENTO SECUNDÁRIO \"%1$s\"?</string>
    <string name="text_passenger">PASSAGEIRO(S)</string>
    <string name="text_check_delete_passenger">DESEJA REALMENTE EXCLUIR O PASSAGEIRO \"%1$s\"?</string>
    <string name="text_state">ESTADO</string>
    <string name="text_item_dead">MORTO</string>
    <string name="text_item_injured">FERIDO</string>
    <string name="text_item_unharmed">ILESO</string>
    <string name="text_data_vehicle_own">DADOS VEÍCULO PRÓPRIO</string>
    <string name="text_plate">PLACA</string>
    <string name="text_brand_desc">MARCA - DESCRIÇÃO</string>
    <string name="text_title_document">CPF</string>
    <string name="text_name">NOME</string>
    <string name="text_phone">TELEFONE</string>
    <string name="text_data_vehicle_foreign">DADOS VEÍCULO ENVOLVIDO</string>
    <string name="text_data_equip">DADOS DO EQUIPAMENTO</string>
    <string name="text_data_colab">DADOS DO COLABORADOR</string>
    <string name="text_colab">COLABORADOR</string>
    <string name="text_data_vehicle">DADOS VEÍCULO</string>
    <string name="text_data_driver">DADOS DO MOTORISTA</string>
    <string name="text_document">DOCUMENTO</string>
    <string name="text_check_delete_equip">DESEJA REALMENTE EXCLUIR O EQUIPAMENTO \"%1$s\"?</string>
    <string name="text_check_delete_vehicle">DESEJA REALMENTE EXCLUIR O VEÍCULO \"%1$s\"?</string>
    <string name="text_check_delete_involved">DESEJA REALMENTE EXCLUIR O ENVOLVIDO \"%1$s\"?</string>
    <string name="text_check_delete_witness">DESEJA REALMENTE EXCLUIR A TESTEMUNHA \"%1$s\"?</string>
    <string name="text_data_passenger">DADOS DO PASSAGEIRO</string>
    <string name="text_data_involved">DADOS DO ENVOLVIDO</string>
    <string name="text_data_witness">DADOS DA TESTEMUNHA</string>
    <string name="text_item_external">TELEFONE - NOME</string>
    <string name="text_item_colab">MATRICULA - NOME</string>
    <string name="text_obs">DESCRIÇÃO SUMÁRIA DO ACIDENTE</string>
    <string name="text_take_photo">TIRAR FOTOS</string>
    <string name="text_title_photo">FOTO(S)</string>
    <string name="text_delete_photo">EXCLUIR FOTOS</string>
    <string name="text_name_photo">photo_</string>
    <string name="text_extension_photo">.jpg</string>
    <string name="text_non_existent_local">POR FAVOR, ADICIONE O LOCAL DO ACIDENTE PARA QUE POSSA FINALIZAR O APONTAMENTO.</string>
    <string name="text_non_existent_data_local">POR FAVOR, ADICIONE DADO(S) DO LOCAL DO ACIDENTE PARA QUE POSSA FINALIZAR O APONTAMENTO.</string>
    <string name="text_non_existent_nature">POR FAVOR, ADICIONE A NATUREZA DO ATENDIMENTO DO ACIDENTE PARA QUE POSSA FINALIZAR O APONTAMENTO.</string>
    <string name="text_non_existent_type_accident">POR FAVOR, ADICIONE O TIPO DO ACIDENTE PARA QUE POSSA FINALIZAR O APONTAMENTO.</string>
    <string name="text_non_existent_vehicle_own">POR FAVOR, ADICIONE O VEÍCULO PRÓPRIO ENVOLVIDO NO ACIDENTE PARA QUE POSSA FINALIZAR O APONTAMENTO.</string>
    <string name="text_breathalyzer">BAFÔMETRO</string>
    <string name="text_pattern_yes">SIM</string>
    <string name="text_pattern_no">NÃO</string>
    <string name="text_pattern_negative">NEGATIVO</string>
    <string name="text_pattern_positive">POSITIVO</string>
    <string name="text_realized_yes">REALIZADO</string>
    <string name="text_realized_no">NÃO REALIZADO</string>
</resources>