...
            .padding(vertical = padding.dp)
            .fillMaxWidth()
    )
}


const val TAG_BUTTON_OK_ALERT_DIALOG_SIMPLE = "tag_button_ok_alert_dialog_simple"
const val TAG_BUTTON_YES_ALERT_DIALOG_CHECK = "tag_button_yes_alert_dialog_check"
const val TAG_BUTTON_NO_ALERT_DIALOG_CHECK = "tag_button_no_alert_dialog_check"
@Composable
fun AlertDialogSimpleDesign(
    text: String,
    onClickOk: () -> Unit
...
